@@ -159,7 +159,7 @@ public class HatchElementBuilder<T> {
             .stream()
             .map(IHatchElement::mteBlacklist)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
 
         // map cannot be null or empty, so assert Optional isPresent
         return adder(
@@ -409,7 +409,8 @@ public class HatchElementBuilder<T> {
     public HatchElementBuilder<T> hatchClass(Class<? extends IMetaTileEntity> clazz) {
         mDescriptionNames = () -> Collections.singletonList(clazz.getSimpleName());
         return hatchItemFilter(c -> is -> clazz.isInstance(ItemMachines.getMetaTileEntity(is)))
-            .cacheHint(() -> StatCollector.translateToLocal("gt.hatch_element_of_class") + clazz.getSimpleName())
+            .cacheHint(
+                () -> StatCollector.translateToLocalFormatted("gt.hatch_element_of_class", clazz.getSimpleName()))
             .shouldSkip(
                 (BiPredicate<? super T, ? super IGregTechTileEntity> & Builtin) (c, t) -> clazz
                     .isInstance(t.getMetaTileEntity()));
@@ -453,7 +454,7 @@ public class HatchElementBuilder<T> {
         };
         return hatchItemFilter(
             c -> is -> GTUtility.isStackValid(is) && is.getItem() instanceof ItemMachines && is.getItemDamage() == aId)
-                .cacheHint(() -> StatCollector.translateToLocal("gt.hatch_element_of_id") + aId)
+                .cacheHint(() -> StatCollector.translateToLocalFormatted("gt.hatch_element_of_id", aId))
                 .shouldSkip(
                     (BiPredicate<? super T, ? super IGregTechTileEntity> & Builtin) (c, t) -> t != null
                         && t.getMetaTileID() == aId);
